<resources>
    <string name="app_name">Laravel Documentation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_switch_branches_master">Master</string>
    <string name="action_switch_branches_5_6">5.6</string>
    <string name="action_switch_branches_5_5">5.5</string>
    <string name="action_switch_branches_5_4">5.4</string>
    <string name="action_switch_branches_5_3">5.3</string>
    <string name="action_switch_branches_5_2">5.2</string>
    <string name="action_switch_branches_5_1">5.1</string>
    <string name="action_switch_branches_5_0">5.0</string>
    <string name="action_switch_branches_4_2">4.2</string>
    <string name="action_switch_branches_4_1">4.1</string>
    <string name="action_switch_branches_4_0">4.0</string>
</resources>
